# pickingsystem

./: .gitignore  README.md  product_list_table.html  pyproject.toml  ☆品目一覧表_改.xlsx  作成手順.yml  出荷計画_20250823_103922.xlsx
docs/: DEV_STATUS.md  requirements_bom.md
src/api/: server.py
src/app_core/: config.py  pdf.py  pipeline.py  printing.py
src/config/: spec.yml
src/templates/: product_list_table.html
src/ui_desktop/: main.py
tests/: test_pipeline.py
